feat: change env to fixed string

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -24,7 +24,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
-		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		password => "changeme"
 		index => "btc-krw-%{+YYYY.MM.dd}"
 	}
 }
