--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -9,4 +9,4 @@ monitoring.ui.container.elasticsearch.enabled: true
 ## X-Pack security credentials
 #
 elasticsearch.username: kibana_system
-elasticsearch.password: ${KIBANA_SYSTEM_PASSWORD}
+elasticsearch.password: "changeme"
