--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,7 +1,8 @@
 ARG ELASTIC_VERSION
 
 # https://www.docker.elastic.co/
-FROM docker.elastic.co/logstash/logstash:${ELASTIC_VERSION}
+FROM docker.elastic.co/logstash/logstash:8.1.2
+
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
